# orangepi_aipro_samples

./: .gitignore  README.en.md  README.md
AIPP/sampleResnetAIPP/cpp/: README.md
AIPP/sampleResnetAIPP/cpp/src/: sampleResnetAIPP.cpp
AIPP/sampleResnetAIPP/python/: README.md
AIPP/sampleResnetAIPP/python/scripts/: sample_run.sh
AIPP/sampleResnetAIPP/python/src/: sampleResnetAIPP.py
DVPP/: README.md  README_CN.md
DVPP/9rtsp/scripts/: sample_run.sh
DVPP/9rtsp/src/: main.cpp
DVPP/batchcrop/: .gitignore  README.md  README_CN.md
DVPP/batchcrop/src/: CMakeLists.txt  dvpp_process.cpp
DVPP/crop/: .gitignore  README.md  README_CN.md
DVPP/crop/scripts/: sample_build.sh  sample_run.sh
DVPP/crop/src/: CMakeLists.txt
DVPP/cropandpaste/: README.md  README_CN.md
DVPP/ffmpegdecode/: README.md  README_CN.md
DVPP/ffmpegdecode/src/: CMakeLists.txt
DVPP/jpegd/: README.md  README_CN.md
DVPP/jpegd/src/: main.h
DVPP/jpege/: .gitignore  README.md  README_CN.md
DVPP/jpege/scripts/: sample_build.sh  sample_run.sh
DVPP/jpege/src/: CMakeLists.txt  main.cpp  main.h
DVPP/resize/: README.md  README_CN.md
DVPP/sampleResnetDVPP/cpp/: README.md
DVPP/sampleResnetDVPP/cpp/scripts/: sample_run.sh
DVPP/sampleResnetDVPP/cppACLLite/: README.md
DVPP/sampleResnetDVPP/cppACLLite/src/: sampleResnetDVPP.cpp
DVPP/sampleResnetDVPP/pyACLLite/: README.md
DVPP/sampleResnetDVPP/pyACLLite/src/: sampleResnetDVPP.py
DVPP/sampleResnetDVPP/python/: README.md
DVPP/sampleResnetDVPP/python/scripts/: sample_run.sh
DVPP/sampleResnetDVPP/python/src/: sampleResnetDVPP.py
DVPP/smallResolution_cropandpaste/: README.md  README_CN.md
DVPP/vdec/: .gitignore  README.md  README_CN.md
DVPP/vdec/scripts/: sample_build.sh  sample_run.sh
DVPP/vdec/src/: CMakeLists.txt  main.cpp
DVPP/vdecandvenc/: README.md  README_CN.md
DVPP/vdecandvenc/inc/: utils.h
DVPP/vdecandvenc/src/: CMakeLists.txt  video_encoder.cpp
DVPP/venc/: README.md  README_CN.md
DVPP/venc/scripts/: sample_build.sh  sample_run.sh
DVPP/venc/src/: CMakeLists.txt  main.cpp
DVPP/venc_image/: README.md  README_CN.md
DVPP/venc_image/inc/: utils.h
DVPP/venc_image/src/: venc_process.cpp
DVPP/video_2camera_rtsp/: README.md
DVPP/video_2camera_rtsp/model/: fusion_result.json
DVPP/video_2camera_rtsp/python/: README.md
DVPP/video_2camera_rtsp/python/scripts/: sample_run.sh
DVPP/video_2camera_rtsp/python/src/: YOLOV5MultiInput.py
DVPP/video_2camera_rtsp/src/: CMakeLists.txt  main.cpp  main.cpp.old
operator/: README.md
operator/AddCustomSample/: README.md
operator/AddCustomSample/FrameworkLaunch/: AddCustom.json  README.md
operator/AddCustomSample/FrameworkLaunch/AclNNInvocation/: README.md  run.sh
operator/AddCustomSample/FrameworkLaunch/AclNNInvocation/inc/: common.h  op_runner.h  operator_desc.h
operator/AddCustomSample/FrameworkLaunch/AclNNInvocation/src/: CMakeLists.txt  common.cpp  main.cpp  op_runner.cpp  operator_desc.cpp
operator/AddCustomSample/FrameworkLaunch/AddCustom/: build.sh
operator/AddCustomSample/FrameworkLaunch/AddCustom/cmake/: func.cmake
operator/AddCustomSample/FrameworkLaunch/AddCustom/cmake/util/: ascendc_bin_param_build.py  ascendc_impl_build.py  code_channel_infer.py  gen_impl_and_mrege_json.sh  insert_simplified_keys.py  opdesc_parser.py  parse_ini_to_json.py  tiling_data_def_build.py
operator/AddCustomSample/FrameworkLaunch/AddCustom/framework/tf_plugin/: tensorflow_add_custom_plugin.cc
operator/AddCustomSample/FrameworkLaunch/AddCustom/op_host/: add_custom.cpp  add_custom_tiling.h
operator/AddCustomSample/FrameworkLaunch/AddCustom/op_kernel/: CMakeLists.txt  add_custom.cpp
operator/AddCustomSample/FrameworkLaunch/CppExtensions/: README.md
operator/AddCustomSample/FrameworkLaunch/CppExtensions/jit/: extension_add.cpp  pytorch_npu_helper.hpp  run.sh
operator/AddCustomSample/FrameworkLaunch/CppExtensions/jit/test/: test_add_custom.py
operator/AddCustomSample/FrameworkLaunch/CppExtensions/load_library/: CMakeLists.txt  extension_add.cpp  pytorch_npu_helper.hpp  run.sh
operator/AddCustomSample/FrameworkLaunch/CppExtensions/load_library/test/: test_add_custom.py
operator/AddCustomSample/FrameworkLaunch/CppExtensions/setup/: run.sh  run_graph.sh  setup.py
operator/AddCustomSample/FrameworkLaunch/CppExtensions/setup/csrc/: extension_add.cpp  extension_add1.cpp  function.h  pytorch_npu_helper.hpp  register.cpp
operator/AddCustomSample/FrameworkLaunch/CppExtensions/setup/custom_ops/: __init__.py  add_custom.py
operator/AddCustomSample/FrameworkLaunch/CppExtensions/setup/graph/: CMakeLists.txt  codegen.cpp  custom_reg_op.h  operator_reg.h
operator/AddCustomSample/FrameworkLaunch/CppExtensions/setup/test/: test_add_custom.py  test_add_custom_graph.py
operator/AddCustomSample/FrameworkLaunch/PytorchInvocation/: README.md  run_op_plugin.sh  test_ops_custom.py
operator/AddCustomSample/FrameworkLaunch/PytorchInvocation/op_plugin_patch/: AddCustomKernelNpuApi.cpp  op_plugin_functions.yaml
operator/AddCustomSample/FrameworkLaunch/TensorflowInvocation/: README.md  run.sh  run_add_custom.py  run_add_custom_tf2.py
operator/AddCustomSample/KernelLaunch/: README.md  add_custom.cpp  data_utils.h  main.cpp  run.sh
operator/AddCustomSample/KernelLaunch/scripts/: gen_data.py
